プレート作成関数 スフィア作成関数 Axis作成関数の追加

--- a/vs2013/evolution_framework.vcxproj
+++ b/vs2013/evolution_framework.vcxproj
@@ -27,6 +27,7 @@
     <ClInclude Include="..\gameobject\vertex_property\vertex_property.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\gameobject\function\create_axis.cpp" />
     <ClCompile Include="..\gameobject\function\create_box.cpp" />
     <ClCompile Include="..\gameobject\function\create_plate.cpp" />
     <ClCompile Include="..\gameobject\function\create_sphere.cpp" />
