--- a/vs2013/evolution_framework.vcxproj.filters
+++ b/vs2013/evolution_framework.vcxproj.filters
@@ -61,5 +61,8 @@
     <ClCompile Include="..\gameobject\function\create_plate.cpp">
       <Filter>gameobject\function</Filter>
     </ClCompile>
+    <ClCompile Include="..\gameobject\function\create_axis.cpp">
+      <Filter>gameobject\function</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
